Edited wiki page TaxonomyAssessment_v1 through web user interface.

--- a/wiki/TaxonomyAssessment_v1.wiki
+++ b/wiki/TaxonomyAssessment_v1.wiki
@@ -3,9 +3,14 @@
 
 = Introduction =
 
+Assessment describes the technical label of a given observation. It is meant to be more descriptive than prescriptive ("what is it?" vs "where does it go?").
 
 = Native Assessments =
+There are several native assessment types within the framework. Their rigid nature provide for faster pre-cached feed generation. To add additional assessments, plugins need to be created. Today, there is no template for this, but will be coming soon. If you need help with a particular assessment, please ask the users list. Sometimes it makes sense to add an additional assessment, sometimes it doesn't. This process will improve as the framework evolves.
+
 == Botnet ==
+The botnet assessment depicts:
+
  * typically a host used to control another host or malicious process
  * matching traffic would usually indicate infection
  * typically used to identify compromised hosts
@@ -32,15 +37,10 @@ Typical examples might include items from:
 
  * http://www.phishtank.com
 
-== Networks ==
- * typically a rogue, hijacked, bullet-proof or known criminal network
-
-== Nameserver ==
- * typically a rogue or criminally negligent name-server
- * depicts a name-server where blocking direct access to the server should mitigate future compromises
-
 == Fastflux ==
- * typically describing a botnet profile
+The fastflux assessment depicts:
+
+ * typically describing a botnet profile where fastflux activity is taking place
 
 == Scanner ==
 The scanner assessment depicts:
@@ -63,9 +63,14 @@ The search assessment depicts:
  * identify's that someone searched for something of possible significance
 
 == Suspicious ==
+The suspicious assessment depicts:
+
  * Unknown assessment
+ * used as the "last default" assessment, combined with "description" for more accurate assessment (eg: assessment- suspicious, description- 'hijacked prefix', or assessment- suspicious, description- 'nameserver').
 
 == Whitelist ==
+The Whitelist assessment depicts:
+
  * denotes that specific entity (usually an address) should be considered harmless in nature
  * denotes that blocking an entity would result in mass collateral damage (eg: yahoo virtually hosted services)
  * confidence should be applied to each entry to help calculate risk associated with whitelist
