Edited wiki page SideBar through web user interface.

--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -35,6 +35,12 @@
    * [API_CIFProtocol_v1 CIF Protocol]
    * [API_ProtocolBuffers_v1 Protocol Buffer API]
    * [API_HTTP_v1 HTTP API]
+  * Cookbook
+   * [Recipe_EC2_v1 EC2]
+   * [Recipe_NFSEN_v1 NFSEN]
+   * [Recipe_Sinkhole_v1 DNS Sinkhole]
+   * [Recipe_ELSA_v1 ELSA Guide]
+   * [Recipe_FederatedSharing_v1 Federated Sharing Tutorial]
  * (deprecated) v0
   * [Server_v0 Server]
    * [ServerInstall_v0 Server Install]
