--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -19,6 +19,7 @@
   * Integration
    * [Feeds_v1 Generating Feeds]
    * [Integration_RT_v1 Request Tracker]
+   * [Integration_NFSEN_v1 NFSEN]
    * [Integration_Snort_v1 Snort]
    * [Integration_Bind_v1 Bind]
    * [Integration_TippingPoint_v1 Tipping Point]
@@ -37,7 +38,6 @@
    * [API_HTTP_v1 HTTP API]
   * Cookbook
    * [Recipe_EC2_v1 EC2]
-   * [Recipe_NFSEN_v1 NFSEN]
    * [Recipe_Sinkhole_v1 DNS Sinkhole]
    * [Recipe_ELSA_v1 ELSA Guide]
    * [Recipe_FederatedSharing_v1 Federated Sharing Tutorial]
