--- a/wiki/Contribute.wiki
+++ b/wiki/Contribute.wiki
@@ -6,7 +6,7 @@
 
 There are many ways to contribute back to the project, from easiest to hardest:
 
- * post a message to the [https://groups.google.com/forum/?fromgroups#!forum/ci-framework list], give as much detail as possible, i'll figure out where it goes and reply back with the github ticket numbers
+ * post a message to the [https://groups.google.com/forum/?fromgroups#!forum/ci-framework list], give as much detail as possible, we'll figure out where it goes and reply back with the github ticket numbers
  * log an [https://github.com/collectiveintel/cif-v1/issues issue]  (with as much detail as possible, etc)
  * log a ticket to the specific repo if you know where it goes (eg: you know the bug is in cif-smrt, etc)
  * fork the v1 branch in the repo (eg: cif-smrt/tree/v1), fix, submit a pull-req (keep them as small and specific as possible)
