Edited wiki page API_FeedTypes_v1 through web user interface.

--- a/wiki/API_FeedTypes_v1.wiki
+++ b/wiki/API_FeedTypes_v1.wiki
@@ -2,7 +2,9 @@
 
 = Introduction =
 
-This document describes the native feed types available in v1
+This document describes the native feed types available in v1.
+
+For more detail on each description, visit the [TaxonomyAssessment_v1 assessments] page.
 
 = Details =
 == Infrastructure ==
