Edited wiki page CIFInfrastructureDiagram_v1 through web user interface.

--- a/wiki/CIFInfrastructureDiagram_v1.wiki
+++ b/wiki/CIFInfrastructureDiagram_v1.wiki
@@ -1,7 +1,11 @@
 #summary Diagrams of different infrastructure layouts (v1)
 #labels version-1
 
-= CIFv1 Distributed Environment =
+<font color="red">
+* THIS GUIDE IS STILL IN BETA *
+</font>
+
+= CIFv1 High Availability Environment =
 
 * Table of Contents *
 <wiki:toc max_depth="2" />
