--- a/wiki/ServerInstall_v1_RC3.wiki
+++ b/wiki/ServerInstall_v1_RC3.wiki
@@ -90,7 +90,7 @@ Configure Postgres authentication and performance tuning
 This release assumes that the client is on the same hardware as the backend server/router components. The final release will include an independent "libcif" (the client libraries) package. This release is for *testing purposes only*... 
 
  # power down apache2
- # install the latest CIF [http://code.google.com/p/collective-intelligence-framework/downloads/list?q=label:RC3 package]
+ # install the latest CIF [https://code.google.com/p/collective-intelligence-framework/downloads/list?can=2&q=filename%3Acif-v1-rc3+-label%3Atesting package]
 {{{
 $ tar -xzvf cif-v1-v0.99-RC3-XXXX.tar.gz
 $ cd cif-v1-v0.99-RC3-XXXX
