--- a/wiki/ClientInstall_Browser_v1.wiki
+++ b/wiki/ClientInstall_Browser_v1.wiki
@@ -28,7 +28,7 @@ This extension for Google Chrome/Firefox allows you to query CIF servers and get
   # Click *Save* and close the settings page.
 
 == Firefox ==
-  # From Firefox, click [https://collective-intelligence-framework.googlecode.com/files/CIF-FFExtension.xpi here] to download the plugin. Drag the downloaded file into the browser to install it.
+  # From Firefox, click [https://addons.mozilla.org/en-US/firefox/addon/cif-client here] to download the plugin. Drag the downloaded file into the browser to install it.
   # Right click CIF button (top right) -> *Settings*
   # Enter your *Nickname* for the host you're connecting to (e.g. _CIF-West_)
   # Enter your URL (e.g. _https://example.org/api/_)
