Edited wiki page ServerInstall_DebianWheezy_v1 through web user interface.

--- a/wiki/ServerInstall_DebianWheezy_v1.wiki
+++ b/wiki/ServerInstall_DebianWheezy_v1.wiki
@@ -43,7 +43,14 @@ $ sudo ldconfig
 }}}
  # Install the remaining CPAN modules
 {{{
-$ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Module::Build,Test::SharedFork,Test::TCP,Net::Abuse::Utils,Regexp::Common::net::CIDR,Linux::Cpuinfo,LWP::Protocol::https,Google::ProtocolBuffers,Iodef::Pb::Simple,Compress::Snappy,Snort::Rule,Time::HiRes,Net::Abuse::Utils::Spamhaus,Net::SSLeay,Net::DNS::Match,Log::Dispatch,Sys::MemInfo,LWPx::ParanoidAgent,ZeroMQ'
+$ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Module::Build,Test::SharedFork,Test::TCP,Net::Abuse::Utils,Regexp::Common::net::CIDR,LWP::Protocol::https,Google::ProtocolBuffers,Iodef::Pb::Simple,Compress::Snappy,Snort::Rule,Time::HiRes,Net::Abuse::Utils::Spamhaus,Net::SSLeay,Net::DNS::Match,Log::Dispatch,Sys::MemInfo,LWPx::ParanoidAgent,ZeroMQ'
+}}}
+ # Linux::Cpuinfo needs to be installed manually due to a signature bug, this will be fixed in v1-FINAL
+{{{
+$ wget http://search.cpan.org/CPAN/authors/id/J/JS/JSTOWE/Linux-Cpuinfo-1.7.tar.gz
+$ tar -zxvf Linux-Cpuinfo-1.7.tar.gz
+$ cd Linux-Cpuinfo-1.7
+$ perl Makefile.PL && make && sudo make install
 }}}
 
 == System Setup ==
