--- a/wiki/ServerInstall_v1_RC3.wiki
+++ b/wiki/ServerInstall_v1_RC3.wiki
@@ -70,7 +70,8 @@ Consult the Disk Layout Guide before setting up your operating system. There are
 ----
 Choose the distribution you used as your base operating system and install the required applications and dependencies.
 
- * (testing) [ServerInstall_DebianSqueeze_v1 Debian Squeeze] 
+ * (testing) [ServerInstall_DebianSqueeze_v1 Debian Squeeze (6)]
+ * (testing) [ServerInstall_DebianWheezy_v1 Debian Wheezy (7)] 
  * (testing) [ServerInstall_Ubuntu12_v1 Ubuntu 12 ] 
  * (testing) [ServerInstall_CentOS6_v1 CentOS 6] 
  * (unstable) [ServerInstall_CentOS5_v1 CentOS 5]
