--- a/wiki/ServerInstall_v1_RC3.wiki
+++ b/wiki/ServerInstall_v1_RC3.wiki
@@ -74,7 +74,7 @@ Choose the distribution you used as your base operating system and install the r
  * (testing) [ServerInstall_DebianWheezy_v1 Debian Wheezy (7)] 
  * (testing) [ServerInstall_Ubuntu12_v1 Ubuntu 12 ] 
  * (testing) [ServerInstall_CentOS6_v1 CentOS 6] 
- * (unstable) [ServerInstall_CentOS5_v1 CentOS 5]
+ * (testing) [ServerInstall_CentOS5_v1 CentOS 5]
 
 == Postgres, Bind and Resolvconf configuration ==
 ----
