--- a/wiki/ServerInstall_v1.wiki
+++ b/wiki/ServerInstall_v1.wiki
@@ -1,4 +1,4 @@
-#summary the Server Installation (v1)
+#summary the Server Installation (v1) RC3
 
 * Before you Begin *
  * From this point on, ignore all other doc (including any client side doc), this page includes all the doc required to test v1 and it could conflict with other doc creating confusion, pain and potential alcohol abuse..
@@ -18,14 +18,14 @@ Issues being discussed on the mailing list can be found [https://groups.google.c
 
 == v0 Compatibility ==
  * You *cannot* run this beta on the same box as CIF v0, it will break stuff. See the client v0 [ClientRemoval_v0 removal guide]
- * older cif clients (v0, v1_RC1) will not work with this current versions of CIF
+ * older cif clients (v0, v1_RC1, v1_RC2) will not work with this current versions of CIF
 == v1 Client ==
  * check out the v1 client [ClientInstall_v1 installer] to install the libcif client libraries (which provides the 'cif' command) on a separate host
  * this document assumes you're testing an instance where the cif client and the server are on the same hardware.
  * If you try to run CIF v1 while watching [http://www.jibjab.com/view/coepggrUTQOmCSW6FZrBSg?mt=1 this], it might not install correctly.
 
 == Upgrading ==
- * If you are installing on top of any of the previous CIF v1 releases, you *must drop* your cif v1 database before installing this release candidate.
+ * If you are installing on top of any of the previous CIF v1 releases, you *must drop* your existing cif v1 database before installing this release candidate. Instructions for this will be provided in the installation instructions below.
 
 == System Requirements ==
 These requirements will handle everything on the same box pretty well with the default open source data-sets. The more (bigger) data-sets you add, the more ram / disk space you'll need. The more cores you add, the more threads that can "batch out" the feed parsers (thus, resulting in faster data consumption).
@@ -68,10 +68,11 @@ Consult the Disk Layout Guide before setting up your operating system. There are
 ----
 Choose the distribution you used as your base operating system and install the required applications and dependencies.
 
- * (testing) [ServerInstall_DebianSqueeze_v1 Debian Squeeze] 
+ * (testing) [ServerInstall_DebianSqueeze_v1 Debian Squeeze (6)]
+ * (testing) [ServerInstall_DebianWheezy_v1 Debian Wheezy (7)] 
  * (testing) [ServerInstall_Ubuntu12_v1 Ubuntu 12 ] 
  * (testing) [ServerInstall_CentOS6_v1 CentOS 6] 
- * (unstable) [ServerInstall_CentOS5_v1 CentOS 5]
+ * (testing) [ServerInstall_CentOS5_v1 CentOS 5]
 
 == Postgres, Bind and Resolvconf configuration ==
 ----
@@ -85,14 +86,34 @@ Configure Postgres authentication and performance tuning
 
 == Installing CIF ==
 ----
-This release assumes that the client is on the same hardware as the backend server/router components. The final release will include an independent "libcif" (the client libraries) package. This release is for *testing purposes only*... 
+This guide assumes that the client is on the same hardware as the backend server/router components. If you want to build out in HA mode, se our [CIFInfrastructureDiagram_v1 HA Guide].
 
- # install the latest CIF [http://code.google.com/p/collective-intelligence-framework/downloads/list?q=label:RC2 package]
+In v1, the ability to query based on BGP prefix information (asn, country code, rir, etc) has been broken out into plugins (included in the base package). These plugins log lots more data to the warehouse and should only be enabled if you have a direct need to query these datatypes (eg: if you're an ISP wanting to query for your AS, etc).
+
+To enable, during the configure process, simply:
+
 {{{
-$ tar -xzvf cif-v1-rc2-XXXX.tar.gz
-$ cd cif-v1-rc2-XXXX
+$ ./configure --enable-dbi-asn --enable-dbi-cc --enable-dbi-rir
+}}}
+
+ # power down apache2
+ # install the latest CIF [https://code.google.com/p/collective-intelligence-framework/downloads/list?can=2&q=filename%3Acif-v1-rc3 package]
+{{{
+$ tar -xzvf cif-v1-rc3-XXXX.tar.gz
+$ cd cif-v1-rc3-XXXX
 $ ./configure && make testdeps
 $ sudo make install
+}}}
+
+=== Upgrade From RC2 ===
+If you're upgrading from RC2, *THIS WILL PURGE ALL EXISTING DATA*, but it will preserve your apikeys. Due to some data-structure changes in RC3 there is no way around this.
+{{{
+$ make rebuilddb
+}}}
+
+=== Fresh Installation ===
+If you're doing a fresh RC3 install, then all that needs to be done is to create the data schemas.
+{{{
 $ sudo make initdb
 }}}
 
@@ -125,6 +146,8 @@ $ vi ~/.cif
 # the simple stuff
 [cif_archive]
 datatypes = infrastructure,domain,url,email,search,malware
+# if we enabled asn/cc/rir in the configure
+# datatypes = infrastructure,domain,url,email,search,malware,cc,asn,rir
 
 # enable your own groups is you start doing data-sharing with various groups
 #groups = everyone,group1.example.com,group2.example.com,group3.example.com
