Edited wiki page ClientInstall_v1 through web user interface.

--- a/wiki/ClientInstall_v1.wiki
+++ b/wiki/ClientInstall_v1.wiki
@@ -29,12 +29,13 @@ A list of known [https://github.com/collectiveintel/cif-v1/issues issues] for v1
 
 = Installation =
 == Required Dependencies ==
- * (testing) [ClientInstall_DebianSqueeze_v1 Debian Squeeze] 
+ * (testing) [ClientInstall_DebianSqueeze_v1 Debian Squeeze (6.x)]
+ * (testing) [ClientInstall_DebianWheezy_v1 Debian Wheezy (7.x)]
  * (testing) [ClientInstall_Ubuntu12_v1 Ubuntu 12] 
  * (testing) [ClientInstall_CentOS6_v1 CentOS 6] 
- * (unstable) [ClientInstall_OSX7_v1 OSX 7] 
+ * (testing) [ClientInstall_OSX7_v1 OSX 7] 
 == Package ==
- # download the latest [https://code.google.com/p/collective-intelligence-framework/downloads/list?can=2&q=label%3ARC2+label%3Av1+summary%3Alibcif-v1 package]
+ # download the latest [https://code.google.com/p/collective-intelligence-framework/downloads/list?can=2&q=summary%3Alibcif-v1+label%3ARC3+-label%3Atesting+-label%3ADeprecated package]
 {{{
 $ tar -xzvf libcif-v1-XXX.tar.gz
 $ cd libcif-v1-XXX
