Edited wiki page ClientInstall_DebianSqueeze_v1 through web user interface.

--- a/wiki/ClientInstall_DebianSqueeze_v1.wiki
+++ b/wiki/ClientInstall_DebianSqueeze_v1.wiki
@@ -2,7 +2,7 @@
 #labels v1
 
 = Introduction =
-This assumes a clean install of Debian Squeeze (v6.0.x) with sudo and all base system updates applied.
+This assumes a clean install of Debian Squeeze (v6.x) with sudo and all base system updates applied.
 
 * Table of Contents *
 <wiki:toc max_depth="2" />
@@ -16,7 +16,7 @@ $ sudo aptitude -y install build-essential libdigest-sha1-perl libnet-cidr-perl 
 }}}
  # Install the remaining CPAN modules
 {{{
-$ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Regexp::Common::net::CIDR,LWP::Protocol::https,Google::ProtocolBuffers,Iodef::Pb::Simple,Compress::Snappy,Snort::Rule,Log::Dispatch,Net::SSLeay'
+$ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Module::Build,Test::SharedFork,Test::TCP,Regexp::Common::net::CIDR,LWP::Protocol::https,Google::ProtocolBuffers,Iodef::Pb::Simple,Compress::Snappy,Snort::Rule,Log::Dispatch,Net::SSLeay'
 }}}
 == Default CIF user ==
 ----
