--- a/wiki/ServerInstall_CentOS6_v1.wiki
+++ b/wiki/ServerInstall_CentOS6_v1.wiki
@@ -71,6 +71,14 @@ $ sudo make install
 
 == System Setup ==
 ----
+
+=== Bind Config ===
+On RHEL6 with this setup you might get [http://crashmag.net/disable-ipv6-lookups-with-bind-on-rhel-or-centos messages like the following] if you're not using ipv6:
+{{{
+error (network unreachable) resolving '0.158.225.189.zen.spamhaus.org/A/IN': 2001:7fd::1#53: 1 Time(s) error (network unreachable) resolving '0.215.141.74.zen.spamhaus.org/A/IN': 2001:7fd::1#53: 1 Time(s) error (network unreachable) resolving '0.239.22.98.zen.spamhaus.org/A/IN': 2001:500:3::42#53: 1 Time(s) error (network unreachable) resolving '0.239.22.98.zen.spamhaus.org/A/IN': 2001:503:ba3e::2:30#53: 1 Time(s)
+}}}
+ # echo "OPTIONS="-4" | sudo tee -a /etc/sysconfig/named
+ # restart bind
 === Resolve Config ===
 We need to point our dns resoultion to the local nameserver instance.
  # modify /etc/sysconfig/network-scripts/ifcfg-eth0 with the following DNS1="127.0.0.1" line
