--- a/wiki/GroupSupport_v1.wiki
+++ b/wiki/GroupSupport_v1.wiki
@@ -2,21 +2,37 @@
 #labels Version-1
 
 = Introduction =
+To add a new group, simply:
+  # associate a users apikey with the new guid (cif
+{{{
+$ cif_apikeys -u root@localhost -a -g mygroup1.example.com,everyone -G mygroup1.example.com
+}}}
+  # add "guid = mygroup.example.com" to the feed config you want this applied to:
+{{{
+source = 'amada.abuse.ch'
+restriction = 'need-to-know'
+alternativeid = 'http://amada.abuse.ch/?search=<address>'
+alternativeid_restriction = 'public'
+confidence = 65
+guid = mygroup.example.com
+}}}
+ # to enable publishing of the group-name (otherwise it will come across as a guid) via the API, simply modify the /home/cif/.cif file on the cif-router and restart the router:
+{{{
+# the simple stuff
+[cif_archive]
+...
+# enable your own groups is you start doing data-sharing with various groups
+#groups = everyone,group1.example.com,group2.example.com,group3.example.com
+groups = everyone,mygroup1.example.com
+}}}
 
-CIF supports the use of "unix style permissions" per record. 
+= Details =
+CIF supports the use of "unix style permissions" per record
 
-The bullet points of this are:
  * enables multi-group and multi-federation support within the system
  * API filters results based on an apikey's association with a group
  * enables larger trust communities to warehouse multi-tiered data (secret handshake vs double secret handshake)
  * enables less trusted users to contribute, query more public data while allowing more trusted users to do the same via the same server/api
-
-= References =
- * http://www.xaprb.com/blog/2006/08/16/how-to-build-role-based-access-control-in-sql/
- * http://www.xaprb.com/blog/2006/08/18/role-based-access-control-in-sql-part-2/
-
-= Details =
-== Overview ==
  * data can be tagged with a unique identifier (guid) by hashing it's "string name", eg: group1.example.com (similar to how domains work in an LDAP forest)
  * data is tagged much as a unix file is tagged
  * people (or their API keys) are then made part of this group to access the data
@@ -28,20 +44,9 @@ The bullet points of this are:
  * when a query is performed, the LEFT JOIN associates the data with the group
  * 'everyone' group refers to everyone in the system, not the public at large
 
-== Tagging Data ==
- * to add a new group, simply 
-  * associate a users apikey with the new guid (cif
-{{{
-$ cif_apikeys -u root@localhost -a -g mygroup1.example.com,everyone -G mygroup1.example.com
-}}}
-  * add "guid = mygroup.example.com" to the feed config you want this applied to:
-{{{
-source = 'amada.abuse.ch'
-severity = 'medium'
-restriction = 'need-to-know'
-alternativeid = 'http://amada.abuse.ch/?search=<address>'
-alternativeid_restriction = 'public'
-confidence = 50
-detection = daily
-guid = mygroup.example.com
-}}}
+
+
+
+= References =
+ * http://www.xaprb.com/blog/2006/08/16/how-to-build-role-based-access-control-in-sql/
+ * http://www.xaprb.com/blog/2006/08/18/role-based-access-control-in-sql-part-2/
